maze.lessons.maze.island.IslandMaze.scala.error
Escaper:15: error: ')' expected but 'else' found.
    } else {while (getDirection()==Direction.NORD) {gauche()}}
      ^